# gbhiera

./: Cargo.toml  README.md
bhiera/: Cargo.toml
bhiera/src/: bhiera.rs  binary.rs  data_provider.rs  element.rs  error.rs  file_data_provider.rs  file_loader.rs  geometry.rs  lib.rs  view.rs
gbhiera/: Cargo.toml  build.rs
gbhiera/src/: gbhiera.rs  main.rs
gbhiera/src/gbhiera/: app.rs  mod.rs  ui.rs
gbhiera/src/ui/: element.slint  hexview.rs  hexview.slint  main.slint  mod.rs  plotter.rs  ui.rs
gbhiera/ui/: hexview.slint  main.slint
