[package]
name = "gbhiera"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bhiera = { version = "0.1.0", path = "../bhiera" }
futures = "0.3.28"
rfd = "0.11.4"
slint = "1.3.2"
tokio = { version = "1.28.2", features = ["full"] }

[build-dependencies]
slint-build = "1.3.2"
